--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mui/material": "^6.4.7",
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.1",
+    "framer-motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
